# oneTBB-2022.1.0-Bazelized

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
.github/workflows/: bazel.yml
